--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "TAILWIND_MODE=watch astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -13,6 +13,6 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^4.0.3",
     "astro": "^3.0.8",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.3.3"
   }
 }
